# fancy_constructor-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/actions/prep-release/: action.yml
.github/actions/release/: action.yml
.github/workflows/: ci.yml  release.yml  test.yml
src/: lib.rs  options.rs  parse.rs  tokenise.rs
src/types/: field.rs  fields.rs  fields_source.rs  mini_field.rs  mod.rs
